# cpp-template

./: CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt
app/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/module1/: CMakeLists.txt
core/module1/include/module1/: header.hpp
core/module1/src/module1/: source.cpp
core/module1/tests/: CMakeLists.txt  tests.cpp
